[gd_scene load_steps=7 format=2]

[ext_resource path="res://Cenas/ItemBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/BulletBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/FireWeaponBase.gd" type="Script" id=3]
[ext_resource path="res://EuBraBo/MÃºsicaArmas/Pistola lazer.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FIRE"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 2, 2, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -3.5, 0 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="FireWeaponBase" instance=ExtResource( 1 )]
script = ExtResource( 3 )
bullet = ExtResource( 2 )
espin = false

[node name="CooldownTimer" type="Timer" parent="." index="1"]
wait_time = 0.4
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="." index="2"]
autoplay = "RESET"
anims/FIRE = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="BulletPos" type="Node2D" parent="." index="3"]
position = Vector2( 9, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="4"]
stream = ExtResource( 4 )
volume_db = -13.0

[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
